# regionpath

./: README.md  pyproject.toml
backend/: README.md
backend/f01/: .env  README.md  agent.py  chat_app.py  db.py  f01_api.py  main.py  ncs_mapper.py  requirements.txt
backend/f01/chroma_db/: chroma.sqlite3
backend/f02/: README.md  api-test.ipynb  job-api-test.ipynb  job_api.py  job_data.pkl
data/: README.md
docs/: README.md
frontend/: README.md
frontend-app/: package-lock.json  package.json
frontend-app/app/: MismatchSection.tsx  layout.tsx  page.tsx
frontend-app/app/trend/: KoreaMap.tsx  KoreaMap3D.tsx  mockData.ts  page.tsx
