[project]
name = "regionpath"
version = "0.1.0"
description = ""
authors = [
    {name = "dellyu03",email = "seunghwan081@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=3.0.2,<4.0.0)",
    "ipython (>=9.13.0,<10.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "requests (>=2.33.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^7.2.0"

